--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+a:link, a:visited {
+    color: blue;
+}
+
 hr {
     border-top: 1px dotted #aaa;
     border-bottom: 0px;
@@ -5,14 +9,29 @@ hr {
     border-right: 0px;
 }
 
-.content {
+#content {
     margin: 20px;
     font-family: 'PT Sans', 'Helvetica', sans-serif;;
     font-size: 1em;
 }
 
-.code {
+#code {
     font-family: 'Courier', sans-serif;
+    font-size: .8em;
+    background-color: #ededed;
+    border-width: 1px;
+    border-style: dotted;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    margin-right: 270px;
+    word-wrap: normal;
+    min-height: 100px;
+}
+
+#files {
+    float: right;
+    width: 200px;
     font-size: .8em;
     background-color: #ededed;
     border-width: 1px;
@@ -23,21 +42,21 @@ hr {
     word-wrap: normal;
 }
 
-.header {
+#header {
     height: 100px;
     margin-top: 10px;
     margin-bottom: 10px;
     vertical-align: middle;
 }
 
-.footer {
+#footer {
     margin-top: 40px;
     margin-bottom: 20px;
     text-align: center;
     color: #aaa;
 }
 
-.footer p {
+#footer p {
     margin-top: 2px;
     margin-bottom: 2px;
 }
